bon/tests/integration/ui/compile_fail/overwritable/attr_getter.rs
use bon::Builder;

#[derive(Builder)]
struct OverwritableCompat {
    #[builder(getter, overwritable)]
    x: u32,
}

fn main() {}
